standalone/inc/wine/dlls/vbscript/parser.output
Terminals unused in grammar

    tREM


State 84 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 179 conflicts: 1 shift/reduce
State 230 conflicts: 2 shift/reduce
State 302 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: OptionExplicit_opt SourceElements
    2        | tEXPRESSION ExpressionNl_opt

    3 OptionExplicit_opt: ε
    4                   | tOPTION tEXPLICIT StSep

    5 SourceElements: ε
    6               | SourceElements GlobalDimDeclaration StSep
    7               | SourceElements StatementNl
    8               | SourceElements ClassDeclaration

    9 GlobalDimDeclaration: tPRIVATE tCONST ConstDeclList
   10                     | tPUBLIC tCONST ConstDeclList
   11                     | tPRIVATE DimDeclList
   12                     | tPUBLIC DimDeclList

   13 ExpressionNl_opt: ε
   14                 | Expression tNL

   15 BodyStatements: ε
   16               | Statement
   17               | StatementNl BodyStatements

   18 StatementsNl_opt: ε
   19                 | StatementsNl

   20 StatementsNl: SimpleStatement StSep
   21             | SimpleStatement StSep StatementsNl

   22 StatementNl: Statement tNL

   23 Statement: ':'
   24          | ':' Statement
   25          | SimpleStatement
   26          | SimpleStatement ':' Statement
   27          | SimpleStatement ':'

   28 SimpleStatement: CallExpression ArgumentList_opt
   29                | tCALL UnaryExpression
   30                | CallExpression '=' Expression
   31                | tDIM DimDeclList
   32                | tREDIM Preserve_opt ReDimDeclList
   33                | IfStatement
   34                | tWHILE Expression StSep StatementsNl_opt tWEND
   35                | tDO DoType Expression StSep StatementsNl_opt tLOOP
   36                | tDO StSep StatementsNl_opt tLOOP DoType Expression
   37                | tDO StSep StatementsNl_opt tLOOP
   38                | FunctionDecl
   39                | tEXIT tDO
   40                | tEXIT tFOR
   41                | tEXIT tFUNCTION
   42                | tEXIT tPROPERTY
   43                | tEXIT tSUB
   44                | tSET CallExpression '=' Expression
   45                | tSTOP
   46                | tON tERROR tRESUME tNEXT
   47                | tON tERROR tGOTO '0'
   48                | tCONST ConstDeclList
   49                | tFOR Identifier '=' Expression tTO Expression Step_opt StSep StatementsNl_opt tNEXT
   50                | tFOR tEACH Identifier tIN Expression StSep StatementsNl_opt tNEXT
   51                | tSELECT tCASE Expression StSep CaseClausules tEND tSELECT
   52                | tWITH Expression StSep StatementsNl_opt tEND tWITH

   53 MemberExpression: Identifier
   54                 | CallExpression '.' tIdentifier
   55                 | tDOT tIdentifier

   56 Preserve_opt: ε
   57             | tPRESERVE

   58 MemberDeclList: MemberDecl
   59               | MemberDecl ',' MemberDeclList

   60 MemberDecl: MemberIdentifier
   61           | MemberIdentifier '(' DimList ')'
   62           | MemberIdentifier tEMPTYBRACKETS

   63 ReDimDecl: tIdentifier '(' ArgumentList ')'

   64 ReDimDeclList: ReDimDecl
   65              | ReDimDecl ',' ReDimDeclList

   66 DimDeclList: DimDecl
   67            | DimDecl ',' DimDeclList

   68 DimDecl: Identifier
   69        | Identifier '(' DimList ')'
   70        | Identifier tEMPTYBRACKETS

   71 DimList: IntegerValue
   72        | IntegerValue ',' DimList

   73 ConstDeclList: ConstDecl
   74              | ConstDecl ',' ConstDeclList

   75 ConstDecl: Identifier '=' ConstExpression

   76 ConstExpression: LiteralExpression
   77                | '-' NumericLiteralExpression

   78 DoType: tWHILE
   79       | tUNTIL

   80 Step_opt: ε
   81         | tSTEP Expression

   82 IfStatement: tIF Expression tTHEN tNL StatementsNl_opt ElseIfs_opt Else_opt tEND tIF
   83            | tIF Expression tTHEN Statement EndIf_opt
   84            | tIF Expression tTHEN Statement tELSE Statement EndIf_opt

   85 EndIf_opt: ε
   86          | tEND tIF

   87 ElseIfs_opt: ε
   88            | ElseIfs

   89 ElseIfs: ElseIf
   90        | ElseIf ElseIfs

   91 ElseIf: tELSEIF Expression tTHEN StSep_opt StatementsNl_opt

   92 Else_opt: ε
   93         | tELSE StSep_opt StatementsNl_opt

   94 CaseClausules: ε
   95              | tCASE tELSE StSep_opt StatementsNl_opt
   96              | tCASE ExpressionList StSep_opt StatementsNl_opt CaseClausules

   97 Arguments: tEMPTYBRACKETS
   98          | '(' ArgumentList ')'

   99 ArgumentList_opt: ε
  100                 | ArgumentList

  101 ArgumentList: Expression
  102             | Expression ',' ArgumentList
  103             | ',' ArgumentList

  104 EmptyBrackets_opt: ε
  105                  | tEMPTYBRACKETS

  106 ExpressionList: Expression
  107               | Expression ',' ExpressionList

  108 Expression: EqvExpression
  109           | Expression tIMP EqvExpression

  110 EqvExpression: XorExpression
  111              | EqvExpression tEQV XorExpression

  112 XorExpression: OrExpression
  113              | XorExpression tXOR OrExpression

  114 OrExpression: AndExpression
  115             | OrExpression tOR AndExpression

  116 AndExpression: NotExpression
  117              | AndExpression tAND NotExpression

  118 NotExpression: EqualityExpression
  119              | tNOT NotExpression

  120 EqualityExpression: ConcatExpression
  121                   | EqualityExpression '=' ConcatExpression
  122                   | EqualityExpression tNEQ ConcatExpression
  123                   | EqualityExpression '>' ConcatExpression
  124                   | EqualityExpression '<' ConcatExpression
  125                   | EqualityExpression tGTEQ ConcatExpression
  126                   | EqualityExpression tLTEQ ConcatExpression
  127                   | EqualityExpression tIS ConcatExpression

  128 ConcatExpression: AdditiveExpression
  129                 | ConcatExpression '&' AdditiveExpression

  130 AdditiveExpression: ModExpression
  131                   | AdditiveExpression '+' ModExpression
  132                   | AdditiveExpression '-' ModExpression

  133 ModExpression: IntdivExpression
  134              | ModExpression tMOD IntdivExpression

  135 IntdivExpression: MultiplicativeExpression
  136                 | IntdivExpression '\\' MultiplicativeExpression

  137 MultiplicativeExpression: ExpExpression
  138                         | MultiplicativeExpression '*' ExpExpression
  139                         | MultiplicativeExpression '/' ExpExpression

  140 ExpExpression: SignExpression
  141              | ExpExpression '^' SignExpression

  142 SignExpression: UnaryExpression
  143               | '-' SignExpression
  144               | '+' SignExpression

  145 UnaryExpression: LiteralExpression
  146                | CallExpression
  147                | tNEW Identifier

  148 CallExpression: PrimaryExpression
  149               | MemberExpression
  150               | CallExpression Arguments

  151 LiteralExpression: tTRUE
  152                  | tFALSE
  153                  | tString
  154                  | tDate
  155                  | NumericLiteralExpression
  156                  | tEMPTY
  157                  | tNULL
  158                  | tNOTHING

  159 NumericLiteralExpression: '0'
  160                         | tInt
  161                         | tDouble

  162 IntegerValue: '0'
  163             | tInt

  164 PrimaryExpression: tEXPRLBRACKET Expression ')'
  165                  | tME

  166 ClassDeclaration: tCLASS Identifier StSep ClassBody tEND tCLASS StSep

  167 ClassBody: ε
  168          | FunctionDecl
  169          | FunctionDecl StSep ClassBody
  170          | Storage MemberDeclList
  171          | Storage MemberDeclList StSep ClassBody
  172          | tDIM DimDeclList
  173          | tDIM DimDeclList StSep ClassBody
  174          | PropertyDecl
  175          | PropertyDecl StSep ClassBody

  176 PropertyDecl: Storage_opt tPROPERTY tGET Identifier ArgumentsDecl_opt StSep BodyStatements tEND tPROPERTY
  177             | Storage_opt tPROPERTY tLET Identifier '(' ArgumentDeclList ')' StSep BodyStatements tEND tPROPERTY
  178             | Storage_opt tPROPERTY tSET Identifier '(' ArgumentDeclList ')' StSep BodyStatements tEND tPROPERTY

  179 FunctionDecl: Storage_opt tSUB Identifier StSep BodyStatements tEND tSUB
  180             | Storage_opt tSUB Identifier ArgumentsDecl Nl_opt BodyStatements tEND tSUB
  181             | Storage_opt tFUNCTION Identifier StSep BodyStatements tEND tFUNCTION
  182             | Storage_opt tFUNCTION Identifier ArgumentsDecl Nl_opt BodyStatements tEND tFUNCTION

  183 Storage_opt: ε
  184            | Storage

  185 Storage: tPUBLIC tDEFAULT
  186        | tPUBLIC
  187        | tPRIVATE

  188 ArgumentsDecl_opt: ε
  189                  | ArgumentsDecl

  190 ArgumentsDecl: tEMPTYBRACKETS
  191              | '(' ArgumentDeclList ')'

  192 ArgumentDeclList: ArgumentDecl
  193                 | ArgumentDecl ',' ArgumentDeclList

  194 ArgumentDecl: Identifier EmptyBrackets_opt
  195             | tBYREF Identifier EmptyBrackets_opt
  196             | tBYVAL Identifier EmptyBrackets_opt

  197 MemberIdentifier: tIdentifier
  198                 | tERROR
  199                 | tEXPLICIT
  200                 | tSTEP

  201 Identifier: tIdentifier
  202           | tDEFAULT
  203           | tERROR
  204           | tEXPLICIT
  205           | tPROPERTY
  206           | tSTEP

  207 StSep_opt: ε
  208          | StSep

  209 Nl_opt: ε
  210       | tNL Nl_opt

  211 StSep: tNL
  212      | ':'
  213      | tNL StSep
  214      | ':' StSep


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 129
    '(' (40) 61 63 69 98 177 178 191
    ')' (41) 61 63 69 98 164 177 178 191
    '*' (42) 138
    '+' (43) 131 144
    ',' (44) 59 65 67 72 74 102 103 107 193
    '-' (45) 77 132 143
    '.' (46) 54
    '/' (47) 139
    '0' (48) 47 159 162
    ':' (58) 23 24 26 27 212 214
    '<' (60) 124
    '=' (61) 30 44 49 75 121
    '>' (62) 123
    '\\' (92) 136
    '^' (94) 141
    error (256)
    tEXPRESSION (258) 2
    tNL (259) 14 22 82 210 211 213
    tEMPTYBRACKETS (260) 62 70 97 105 190
    tEXPRLBRACKET (261) 164
    tLTEQ (262) 126
    tGTEQ (263) 125
    tNEQ (264) 122
    tSTOP (265) 45
    tME (266) 165
    tREM (267)
    tDOT (268) 55
    tTRUE <string> (269) 151
    tFALSE <string> (270) 152
    tNOT <string> (271) 119
    tAND <string> (272) 117
    tOR <string> (273) 115
    tXOR <string> (274) 113
    tEQV <string> (275) 111
    tIMP <string> (276) 109
    tIS <string> (277) 127
    tMOD <string> (278) 134
    tCALL <string> (279) 29
    tSUB <string> (280) 43 179 180
    tFUNCTION <string> (281) 41 181 182
    tGET <string> (282) 176
    tLET <string> (283) 177
    tCONST <string> (284) 9 10 48
    tDIM <string> (285) 31 172 173
    tREDIM <string> (286) 32
    tPRESERVE <string> (287) 57
    tIF <string> (288) 82 83 84 86
    tELSE <string> (289) 84 93 95
    tELSEIF <string> (290) 91
    tEND <string> (291) 51 52 82 86 166 176 177 178 179 180 181 182
    tTHEN <string> (292) 82 83 84 91
    tEXIT <string> (293) 39 40 41 42 43
    tWHILE <string> (294) 34 78
    tWEND <string> (295) 34
    tDO <string> (296) 35 36 37 39
    tLOOP <string> (297) 35 36 37
    tUNTIL <string> (298) 79
    tFOR <string> (299) 40 49 50
    tTO <string> (300) 49
    tEACH <string> (301) 50
    tIN <string> (302) 50
    tSELECT <string> (303) 51
    tCASE <string> (304) 51 95 96
    tWITH <string> (305) 52
    tBYREF <string> (306) 195
    tBYVAL <string> (307) 196
    tOPTION <string> (308) 4
    tNOTHING <string> (309) 158
    tEMPTY <string> (310) 156
    tNULL <string> (311) 157
    tCLASS <string> (312) 166
    tSET <string> (313) 44 178
    tNEW <string> (314) 147
    tPUBLIC <string> (315) 10 12 185 186
    tPRIVATE <string> (316) 9 11 187
    tNEXT <string> (317) 46 49 50
    tON <string> (318) 46 47
    tRESUME <string> (319) 46
    tGOTO <string> (320) 47
    tIdentifier <string> (321) 54 55 63 197 201
    tString <string> (322) 153
    tDEFAULT <string> (323) 185 202
    tERROR <string> (324) 46 47 198 203
    tEXPLICIT <string> (325) 4 199 204
    tPROPERTY <string> (326) 42 176 177 178 205
    tSTEP <string> (327) 81 200 206
    tInt <integer> (328) 160 163
    tDouble <dbl> (329) 161
    tDate <date> (330) 154


Nonterminals, with rules where they appear

    $accept (92)
        on left: 0
    Program (93)
        on left: 1 2
        on right: 0
    OptionExplicit_opt (94)
        on left: 3 4
        on right: 1
    SourceElements (95)
        on left: 5 6 7 8
        on right: 1 6 7 8
    GlobalDimDeclaration <statement> (96)
        on left: 9 10 11 12
        on right: 6
    ExpressionNl_opt <expression> (97)
        on left: 13 14
        on right: 2
    BodyStatements <statement> (98)
        on left: 15 16 17
        on right: 17 176 177 178 179 180 181 182
    StatementsNl_opt <statement> (99)
        on left: 18 19
        on right: 34 35 36 37 49 50 52 82 91 93 95 96
    StatementsNl <statement> (100)
        on left: 20 21
        on right: 19 21
    StatementNl <statement> (101)
        on left: 22
        on right: 7 17
    Statement <statement> (102)
        on left: 23 24 25 26 27
        on right: 16 22 24 26 83 84
    SimpleStatement <statement> (103)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 20 21 25 26 27
    MemberExpression <member> (104)
        on left: 53 54 55
        on right: 149
    Preserve_opt <boolean> (105)
        on left: 56 57
        on right: 32
    MemberDeclList <dim_decl> (106)
        on left: 58 59
        on right: 59 170 171
    MemberDecl <dim_decl> (107)
        on left: 60 61 62
        on right: 58 59
    ReDimDecl <redim_decl> (108)
        on left: 63
        on right: 64 65
    ReDimDeclList <redim_decl> (109)
        on left: 64 65
        on right: 32 65
    DimDeclList <dim_decl> (110)
        on left: 66 67
        on right: 11 12 31 67 172 173
    DimDecl <dim_decl> (111)
        on left: 68 69 70
        on right: 66 67
    DimList <dim_list> (112)
        on left: 71 72
        on right: 61 69 72
    ConstDeclList <const_decl> (113)
        on left: 73 74
        on right: 9 10 48 74
    ConstDecl <const_decl> (114)
        on left: 75
        on right: 73 74
    ConstExpression <expression> (115)
        on left: 76 77
        on right: 75
    DoType <boolean> (116)
        on left: 78 79
        on right: 35 36
    Step_opt <expression> (117)
        on left: 80 81
        on right: 49
    IfStatement <statement> (118)
        on left: 82 83 84
        on right: 33
    EndIf_opt (119)
        on left: 85 86
        on right: 83 84
    ElseIfs_opt <elseif> (120)
        on left: 87 88
        on right: 82
    ElseIfs <elseif> (121)
        on left: 89 90
        on right: 88 90
    ElseIf <elseif> (122)
        on left: 91
        on right: 89 90
    Else_opt <statement> (123)
        on left: 92 93
        on right: 82
    CaseClausules <case_clausule> (124)
        on left: 94 95 96
        on right: 51 96
    Arguments <expression> (125)
        on left: 97 98
        on right: 150
    ArgumentList_opt <expression> (126)
        on left: 99 100
        on right: 28
    ArgumentList <expression> (127)
        on left: 101 102 103
        on right: 63 98 100 102 103
    EmptyBrackets_opt (128)
        on left: 104 105
        on right: 194 195 196
    ExpressionList <expression> (129)
        on left: 106 107
        on right: 96 107
    Expression <expression> (130)
        on left: 108 109
        on right: 14 30 34 35 36 44 49 50 51 52 81 82 83 84 91 101 102 106 107 109 164
    EqvExpression <expression> (131)
        on left: 110 111
        on right: 108 109 111
    XorExpression <expression> (132)
        on left: 112 113
        on right: 110 111 113
    OrExpression <expression> (133)
        on left: 114 115
        on right: 112 113 115
    AndExpression <expression> (134)
        on left: 116 117
        on right: 114 115 117
    NotExpression <expression> (135)
        on left: 118 119
        on right: 116 117 119
    EqualityExpression <expression> (136)
        on left: 120 121 122 123 124 125 126 127
        on right: 118 121 122 123 124 125 126 127
    ConcatExpression <expression> (137)
        on left: 128 129
        on right: 120 121 122 123 124 125 126 127 129
    AdditiveExpression <expression> (138)
        on left: 130 131 132
        on right: 128 129 131 132
    ModExpression <expression> (139)
        on left: 133 134
        on right: 130 131 132 134
    IntdivExpression <expression> (140)
        on left: 135 136
        on right: 133 134 136
    MultiplicativeExpression <expression> (141)
        on left: 137 138 139
        on right: 135 136 138 139
    ExpExpression <expression> (142)
        on left: 140 141
        on right: 137 138 139 141
    SignExpression <expression> (143)
        on left: 142 143 144
        on right: 140 141 143 144
    UnaryExpression <expression> (144)
        on left: 145 146 147
        on right: 29 142
    CallExpression <expression> (145)
        on left: 148 149 150
        on right: 28 30 44 54 146 150
    LiteralExpression <expression> (146)
        on left: 151 152 153 154 155 156 157 158
        on right: 76 145
    NumericLiteralExpression <expression> (147)
        on left: 159 160 161
        on right: 77 155
    IntegerValue <uint> (148)
        on left: 162 163
        on right: 71 72
    PrimaryExpression <expression> (149)
        on left: 164 165
        on right: 148
    ClassDeclaration <class_decl> (150)
        on left: 166
        on right: 8
    ClassBody <class_decl> (151)
        on left: 167 168 169 170 171 172 173 174 175
        on right: 166 169 171 173 175
    PropertyDecl <func_decl> (152)
        on left: 176 177 178
        on right: 174 175
    FunctionDecl <func_decl> (153)
        on left: 179 180 181 182
        on right: 38 168 169
    Storage_opt <uint> (154)
        on left: 183 184
        on right: 176 177 178 179 180 181 182
    Storage <uint> (155)
        on left: 185 186 187
        on right: 170 171 184
    ArgumentsDecl_opt <arg_decl> (156)
        on left: 188 189
        on right: 176
    ArgumentsDecl <arg_decl> (157)
        on left: 190 191
        on right: 180 182 189
    ArgumentDeclList <arg_decl> (158)
        on left: 192 193
        on right: 177 178 191 193
    ArgumentDecl <arg_decl> (159)
        on left: 194 195 196
        on right: 192 193
    MemberIdentifier <string> (160)
        on left: 197 198 199 200
        on right: 60 61 62
    Identifier <string> (161)
        on left: 201 202 203 204 205 206
        on right: 49 50 53 68 69 70 75 147 166 176 177 178 179 180 181 182 194 195 196
    StSep_opt (162)
        on left: 207 208
        on right: 91 93 95 96
    Nl_opt (163)
        on left: 209 210
        on right: 180 182 210
    StSep (164)
        on left: 211 212 213 214
        on right: 4 6 20 21 34 35 36 37 49 50 51 52 166 169 171 173 175 176 177 178 179 181 208 213 214


State 0

    0 $accept: • Program $end

    tEXPRESSION  shift, and go to state 1
    tOPTION      shift, and go to state 2

    $default  reduce using rule 3 (OptionExplicit_opt)

    Program             go to state 3
    OptionExplicit_opt  go to state 4


State 1

    2 Program: tEXPRESSION • ExpressionNl_opt

    tEXPRLBRACKET  shift, and go to state 5
    tME            shift, and go to state 6
    tDOT           shift, and go to state 7
    tTRUE          shift, and go to state 8
    tFALSE         shift, and go to state 9
    tNOT           shift, and go to state 10
    tNOTHING       shift, and go to state 11
    tEMPTY         shift, and go to state 12
    tNULL          shift, and go to state 13
    tNEW           shift, and go to state 14
    tIdentifier    shift, and go to state 15
    tString        shift, and go to state 16
    tDEFAULT       shift, and go to state 17
    tERROR         shift, and go to state 18
    tEXPLICIT      shift, and go to state 19
    tPROPERTY      shift, and go to state 20
    tSTEP          shift, and go to state 21
    tInt           shift, and go to state 22
    tDouble        shift, and go to state 23
    tDate          shift, and go to state 24
    '0'            shift, and go to state 25
    '-'            shift, and go to state 26
    '+'            shift, and go to state 27

    $default  reduce using rule 13 (ExpressionNl_opt)

    ExpressionNl_opt          go to state 28
    MemberExpression          go to state 29
    Expression                go to state 30
    EqvExpression             go to state 31
    XorExpression             go to state 32
    OrExpression              go to state 33
    AndExpression             go to state 34
    NotExpression             go to state 35
    EqualityExpression        go to state 36
    ConcatExpression          go to state 37
    AdditiveExpression        go to state 38
    ModExpression             go to state 39
    IntdivExpression          go to state 40
    MultiplicativeExpression  go to state 41
    ExpExpression             go to state 42
    SignExpression            go to state 43
    UnaryExpression           go to state 44
    CallExpression            go to state 45
    LiteralExpression         go to state 46
    NumericLiteralExpression  go to state 47
    PrimaryExpression         go to state 48
    Identifier                go to state 49


State 2

    4 OptionExplicit_opt: tOPTION • tEXPLICIT StSep

    tEXPLICIT  shift, and go to state 50


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 51


State 4

    1 Program: OptionExplicit_opt • SourceElements

    $default  reduce using rule 5 (SourceElements)

    SourceElements  go to state 52


State 5

  164 PrimaryExpression: tEXPRLBRACKET • Expression ')'

    tEXPRLBRACKET  shift, and go to state 5
    tME            shift, and go to state 6
    tDOT           shift, and go to state 7
    tTRUE          shift, and go to state 8
    tFALSE         shift, and go to state 9
    tNOT           shift, and go to state 10
    tNOTHING       shift, and go to state 11
    tEMPTY         shift, and go to state 12
    tNULL          shift, and go to state 13
    tNEW           shift, and go to state 14
    tIdentifier    shift, and go to state 15
    tString        shift, and go to state 16
    tDEFAULT       shift, and go to state 17
    tERROR         shift, and go to state 18
    tEXPLICIT      shift, and go to state 19
    tPROPERTY      shift, and go to state 20
    tSTEP          shift, and go to state 21
    tInt           shift, and go to state 22
    tDouble        shift, and go to state 23
    tDate          shift, and go to state 24
    '0'            shift, and go to state 25
    '-'            shift, and go to state 26
    '+'            shift, and go to state 27

    MemberExpression          go to state 29
    Expression                go to state 53
    EqvExpression             go to state 31
    XorExpression             go to state 32
    OrExpression              go to state 33
    AndExpression             go to state 34
    NotExpression             go to state 35
    EqualityExpression        go to state 36
    ConcatExpression          go to state 37
    AdditiveExpression        go to state 38
    ModExpression             go to state 39
    IntdivExpression          go to state 40
    MultiplicativeExpression  go to state 41
    ExpExpression             go to state 42
    SignExpression            go to state 43
    UnaryExpression           go to state 44
    CallExpression            go to state 45
    LiteralExpression         go to state 46
    NumericLiteralExpression  go to state 47
    PrimaryExpression         go to state 48
    Identifier                go to state 49


State 6

  165 PrimaryExpression: tME •

    $default  reduce using rule 165 (PrimaryExpression)


State 7

   55 MemberExpression: tDOT • tIdentifier

    tIdentifier  shift, and go to state 54


State 8

  151 LiteralExpression: tTRUE •

    $default  reduce using rule 151 (LiteralExpression)


State 9

  152 LiteralExpression: tFALSE •

    $default  reduce using rule 152 (LiteralExpression)


State 10

  119 NotExpression: tNOT • NotExpression

    tEXPRLBRACKET  shift, and go to state 5
    tME            shift, and go to state 6
    tDOT           shift, and go to state 7
    tTRUE          shift, and go to state 8
    tFALSE         shift, and go to state 9
    tNOT           shift, and go to state 10
    tNOTHING       shift, and go to state 11
    tEMPTY         shift, and go to state 12
    tNULL          shift, and go to state 13
    tNEW           shift, and go to state 14
    tIdentifier    shift, and go to state 15
    tString        shift, and go to state 16
    tDEFAULT       shift, and go to state 17
    tERROR         shift, and go to state 18
    tEXPLICIT      shift, and go to state 19
    tPROPERTY      shift, and go to state 20
    tSTEP          shift, and go to state 21
    tInt           shift, and go to state 22
    tDouble        shift, and go to state 23
    tDate          shift, and go to state 24
    '0'            shift, and go to state 25
    '-'            shift, and go to state 26
    '+'            shift, and go to state 27

    MemberExpression          go to state 29
    NotExpression             go to state 55
    EqualityExpression        go to state 36
    ConcatExpression          go to state 37
    AdditiveExpression        go to state 38
    ModExpression             go to state 39
    IntdivExpression          go to state 40
    MultiplicativeExpression  go to state 41
    ExpExpression             go to state 42
    SignExpression            go to state 43
    UnaryExpression           go to state 44
    CallExpression            go to state 45
    LiteralExpression         go to state 46
    NumericLiteralExpression  go to state 47
    PrimaryExpression         go to state 48
    Identifier                go to state 49


State 11

  158 LiteralExpression: tNOTHING •

    $default  reduce using rule 158 (LiteralExpression)


State 12

  156 LiteralExpression: tEMPTY •

    $default  reduce using rule 156 (LiteralExpression)


State 13

  157 LiteralExpression: tNULL •

    $default  reduce using rule 157 (LiteralExpression)


State 14

  147 UnaryExpression: tNEW • Identifier

    tIdentifier  shift, and go to state 15
    tDEFAULT     shift, and go to state 17
    tERROR       shift, and go to state 18
    tEXPLICIT    shift, and go to state 19
    tPROPERTY    shift, and go to state 20
    tSTEP        shift, and go to state 21

    Identifier  go to state 56


State 15

  201 Identifier: tIdentifier •

    $default  reduce using rule 201 (Identifier)


State 16

  153 LiteralExpression: tString •

    $default  reduce using rule 153 (LiteralExpression)


State 17

  202 Identifier: tDEFAULT •

    $default  reduce using rule 202 (Identifier)


State 18

  203 Identifier: tERROR •

    $default  reduce using rule 203 (Identifier)


State 19

  204 Identifier: tEXPLICIT •

    $default  reduce using rule 204 (Identifier)


State 20

  205 Identifier: tPROPERTY •

    $default  reduce using rule 205 (Identifier)


State 21

  206 Identifier: tSTEP •

    $default  reduce using rule 206 (Identifier)


State 22

  160 NumericLiteralExpression: tInt •

    $default  reduce using rule 160 (NumericLiteralExpression)


State 23

  161 NumericLiteralExpression: tDouble •

    $default  reduce using rule 161 (NumericLiteralExpression)


State 24

  154 LiteralExpression: tDate •

    $default  reduce using rule 154 (LiteralExpression)


State 25

  159 NumericLiteralExpression: '0' •

    $default  reduce using rule 159 (NumericLiteralExpression)


State 26

  143 SignExpression: '-' • SignExpression

    tEXPRLBRACKET  shift, and go to state 5
    tME            shift, and go to state 6
    tDOT           shift, and go to state 7
    tTRUE          shift, and go to state 8
    tFALSE         shift, and go to state 9
    tNOTHING       shift, and go to state 11
    tEMPTY         shift, and go to state 12
    tNULL          shift, and go to state 13
    tNEW           shift, and go to state 14
    tIdentifier    shift, and go to state 15
    tString        shift, and go to state 16
    tDEFAULT       shift, and go to state 17
    tERROR         shift, and go to state 18
    tEXPLICIT      shift, and go to state 19
    tPROPERTY      shift, and go to state 20
    tSTEP          shift, and go to state 21
    tInt           shift, and go to state 22
    tDouble        shift, and go to state 23
    tDate          shift, and go to state 24
    '0'            shift, and go to state 25
    '-'            shift, and go to state 26
    '+'            shift, and go to state 27

    MemberExpression          go to state 29
    SignExpression            go to state 57
    UnaryExpression           go to state 44
    CallExpression            go to state 45
    LiteralExpression         go to state 46
    NumericLiteralExpression  go to state 47
    PrimaryExpression         go to state 48
    Identifier                go to state 49


State 27

  144 SignExpression: '+' • SignExpression

    tEXPRLBRACKET  shift, and go to state 5
    tME            shift, and go to state 6
    tDOT           shift, and go to state 7
    tTRUE          shift, and go to state 8
    tFALSE         shift, and go to state 9
    tNOTHING       shift, and go to state 11
    tEMPTY         shift, and go to state 12
    tNULL          shift, and go to state 13
    tNEW           shift, and go to state 14
    tIdentifier    shift, and go to state 15
    tString        shift, and go to state 16
    tDEFAULT       shift, and go to state 17
    tERROR         shift, and go to state 18
    tEXPLICIT      shift, and go to state 19
    tPROPERTY      shift, and go to state 20
    tSTEP          shift, and go to state 21
    tInt           shift, and go to state 22
    tDouble        shift, and go to state 23
    tDate          shift, and go to state 24
    '0'            shift, and go to state 25
    '-'            shift, and go to state 26
    '+'            shift, and go to state 27

    MemberExpression          go to state 29
    SignExpression            go to state 58
    UnaryExpression           go to state 44
    CallExpression            go to state 45
    LiteralExpression         go to state 46
    NumericLiteralExpression  go to state 47
    PrimaryExpression         go to state 48
    Identifier                go to state 49


State 28

    2 Program: tEXPRESSION ExpressionNl_opt •

    $default  reduce using rule 2 (Program)


State 29

  149 CallExpression: MemberExpression •

    $default  reduce using rule 149 (CallExpression)


State 30

   14 ExpressionNl_opt: Expression • tNL
  109 Expression: Expression • tIMP EqvExpression

    tNL   shift, and go to state 59
    tIMP  shift, and go to state 60


State 31

  108 Expression: EqvExpression •
  111 EqvExpression: EqvExpression • tEQV XorExpression

    tEQV  shift, and go to state 61

    $default  reduce using rule 108 (Expression)


State 32

  110 EqvExpression: XorExpression •
  113 XorExpression: XorExpression • tXOR OrExpression

    tXOR  shift, and go to state 62

    $default  reduce using rule 110 (EqvExpression)


State 33

  112 XorExpression: OrExpression •
  115 OrExpression: OrExpression • tOR AndExpression

    tOR  shift, and go to state 63

    $default  reduce using rule 112 (XorExpression)


State 34

  114 OrExpression: AndExpression •
  117 AndExpression: AndExpression • tAND NotExpression

    tAND  shift, and go to state 64

    $default  reduce using rule 114 (OrExpression)


State 35

  116 AndExpression: NotExpression •

    $default  reduce using rule 116 (AndExpression)


State 36

  118 NotExpression: EqualityExpression •
  121 EqualityExpression: EqualityExpression • '=' ConcatExpression
  122                   | EqualityExpression • tNEQ ConcatExpression
  123                   | EqualityExpression • '>' ConcatExpression
  124                   | EqualityExpression • '<' ConcatExpression
  125                   | EqualityExpression • tGTEQ ConcatExpression
  126                   | EqualityExpression • tLTEQ ConcatExpression
  127                   | EqualityExpression • tIS ConcatExpression

    tLTEQ  shift, and go to state 65
    tGTEQ  shift, and go to state 66
    tNEQ   shift, and go to state 67
    tIS    shift, and go to state 68
    '='    shift, and go to state 69
    '>'    shift, and go to state 70
    '<'    shift, and go to state 71

    $default  reduce using rule 118 (NotExpression)


State 37

  120 EqualityExpression: ConcatExpression •
  129 ConcatExpression: ConcatExpression • '&' AdditiveExpression

    '&'  shift, and go to state 72

    $default  reduce using rule 120 (EqualityExpression)


State 38

  128 ConcatExpression: AdditiveExpression •
  131 AdditiveExpression: AdditiveExpression • '+' ModExpression
  132                   | AdditiveExpression • '-' ModExpression

    '-'  shift, and go to state 73
    '+'  shift, and go to state 74

    $default  reduce using rule 128 (ConcatExpression)


State 39

  130 AdditiveExpression: ModExpression •
  134 ModExpression: ModExpression • tMOD IntdivExpression

    tMOD  shift, and go to state 75

    $default  reduce using rule 130 (AdditiveExpression)


State 40

  133 ModExpression: IntdivExpression •
  136 IntdivExpression: IntdivExpression • '\\' MultiplicativeExpression

    '\\'  shift, and go to state 76

    $default  reduce using rule 133 (ModExpression)


State 41

  135 IntdivExpression: MultiplicativeExpression •
  138 MultiplicativeExpression: MultiplicativeExpression • '*' ExpExpression
  139                         | MultiplicativeExpression • '/' ExpExpression

    '*'  shift, and go to state 77
    '/'  shift, and go to state 78

    $default  reduce using rule 135 (IntdivExpression)


State 42

  137 MultiplicativeExpression: ExpExpression •
  141 ExpExpression: ExpExpression • '^' SignExpression

    '^'  shift, and go to state 79

    $default  reduce using rule 137 (MultiplicativeExpression)


State 43

  140 ExpExpression: SignExpression •

    $default  reduce using rule 140 (ExpExpression)


State 44

  142 SignExpression: UnaryExpression •

    $default  reduce using rule 142 (SignExpression)


State 45

   54 MemberExpression: CallExpression • '.' tIdentifier
  146 UnaryExpression: CallExpression •
  150 CallExpression: CallExpression • Arguments

    tEMPTYBRACKETS  shift, and go to state 80
    '.'             shift, and go to state 81
    '('             shift, and go to state 82

    $default  reduce using rule 146 (UnaryExpression)

    Arguments  go to state 83


State 46
